// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should accept style prop 1`] = `
.emotion-0 {
  font-weight: bold;
  color: red;
}

<span
  class="emotion-0"
>
  This is red
</span>
`;

exports[`Text should render correctly 1`] = `
<span
  class="emotion-0"
>
  Test 1
</span>
`;

exports[`Text should render correctly 2`] = `
<p
  class="emotion-0"
>
  Test with p tag
</p>
`;

exports[`Text should render correctly 3`] = `
.emotion-0 {
  font-weight: bold;
}

<span
  class="emotion-0"
>
  Test weight
</span>
`;

exports[`Text should render correctly 4`] = `
.emotion-0 {
  font-size: 2rem;
}

<span
  class="emotion-0"
>
  Test size
</span>
`;

exports[`Text should render correctly 5`] = `
.emotion-0 {
  color: #0A67D1;
}

<span
  class="emotion-0"
>
  Test color
</span>
`;

exports[`Text should render correctly 6`] = `
.emotion-0 {
  font-style: italic;
}

<span
  class="emotion-0"
>
  Test italic
</span>
`;
